--- a/project0/Stylet.css
+++ b/project0/Stylet.css
@@ -2,4 +2,13 @@ body {
   font-family: Arial;
   font-size: 18px;
 }
+
+div p, div h1 {
+  font-family: Arial;
+}
+
+div h1 {
+  font-style: normal;
+  text-align: center;
+}
 /*# sourceMappingURL=Stylet.css.map */
